[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/ComponentClassesList.gd" type="Script" id=1]
[ext_resource path="res://ui/parts/PartClassExplorer.gd" type="Script" id=2]
[ext_resource path="res://ui/components/ComponentClassesList.tscn" type="PackedScene" id=3]

[node name="Explorer" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -191.0
margin_right = 189.0
margin_bottom = 191.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 373.0
margin_bottom = 377.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 368.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_right = 368.0
margin_bottom = 23.0
text = "Clases"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 368.0
margin_bottom = 31.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 368.0
margin_bottom = 337.0
size_flags_vertical = 7

[node name="ClassesList" type="ItemList" parent="VBoxContainer/MarginContainer2" instance=ExtResource( 3 )]
margin_right = 368.0
margin_bottom = 302.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 341.0
margin_right = 368.0
margin_bottom = 345.0

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 349.0
margin_right = 368.0
margin_bottom = 372.0

[node name="Box" type="HBoxContainer" parent="VBoxContainer/Buttons"]
margin_right = 368.0
margin_bottom = 23.0

[node name="ButtonDelete" type="Button" parent="VBoxContainer/Buttons/Box"]
margin_right = 120.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
disabled = true
text = "Eliminar"

[node name="ButtonEdit" type="Button" parent="VBoxContainer/Buttons/Box"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
disabled = true
text = "Editar"

[node name="ButtonNew" type="Button" parent="VBoxContainer/Buttons/Box"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Nueva"

[connection signal="class_deselected" from="VBoxContainer/MarginContainer2/ClassesList" to="." method="_on_ClassesList_class_deselected"]
[connection signal="class_selected" from="VBoxContainer/MarginContainer2/ClassesList" to="." method="_on_ClassesList_class_selected"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer2/ClassesList" to="VBoxContainer/MarginContainer2/ClassesList" method="_on_ClassesList_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/MarginContainer2/ClassesList" to="VBoxContainer/MarginContainer2/ClassesList" method="_on_ClassesList_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/Buttons/Box/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Box/ButtonEdit" to="." method="_on_ButtonEdit_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Box/ButtonNew" to="." method="_on_ButtonNew_pressed"]
